--- a/style.css
+++ b/style.css
@@ -6,39 +6,36 @@ body {
 }
 
 .container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+    width: 80%;
+    margin: 20px auto;
     background-color: #fff;
-    border-radius: 8px;
+    padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
 }
 
-.container img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 4px;
-    margin-bottom: 15px;
+.container div {
+    margin-bottom: 20px;
 }
 
-.container strong {
+strong {
     color: #333;
 }
 
+img {
+    max-width: 100%;
+    max-height: 200px; /* Ajustez cette valeur en fonction de vos besoins */
+    height: auto;
+    margin-top: 10px;
+    border-radius: 8px;
+}
+
+
 .tag {
-    background-color: #007bff;
-    color: #fff;
+    display: inline-block;
     padding: 5px 10px;
     margin-right: 5px;
+    background-color: #007bff;
+    color: #fff;
     border-radius: 4px;
-    display: inline-block;
-}
-
-.no-tag {
-    color: #777;
-    font-style: italic;
-}
-
-.center {
-    text-align: center;
 }
