--- a/style.css
+++ b/style.css
@@ -1,41 +1,41 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
 }
 
 .container {
-    width: 80%;
+    max-width: 800px;
     margin: 20px auto;
     background-color: #fff;
     padding: 20px;
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
 }
 
-.container div {
-    margin-bottom: 20px;
+.result {
+    text-align: center;
 }
 
-strong {
-    color: #333;
-}
-
-img {
+.result img {
     max-width: 100%;
-    max-height: 200px; /* Ajustez cette valeur en fonction de vos besoins */
+    max-height: 300px;
     height: auto;
     margin-top: 10px;
     border-radius: 8px;
 }
 
-
 .tag {
-    display: inline-block;
-    padding: 5px 10px;
-    margin-right: 5px;
     background-color: #007bff;
     color: #fff;
-    border-radius: 4px;
+    padding: 5px 10px;
+    margin-right: 5px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-top: 10px;
+}
+
+.tag:last-child {
+    margin-right: 0;
 }
